<resources>
    <string name="app_name">KryptoPal</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dollar"> $ </string>
    <string name="application_splash_icon">Application Splash Icon</string>
    <string name="indian_rupee"> ₹ </string>
    <string name="select_your_bank">Select Your Bank</string>
    <string name="bit_encryption">Your payment details are secured via 128 bit encryption by version</string>
    <string name="sell">Sell</string>
    <string name="token_coin">Token/Coin</string>
    <string name="eth">ETH</string>
    <string name="btc">BTC</string>
    <string name="your_wallet_address">Your Wallet Address</string>
    <string name="bank_of_america">Bank of America</string>
    <string name="deposit_funds_into">Deposit Funds Into</string>
    <string name="buy_now">Buy Now</string>
    <string name="do_you_want_to_proceed">Do you want to proceed?</string>
    <string name="note_our_lowest_transaction_fee">Note: Our lowest transaction fee of 1% is applied and adjusted while calculating the returned tokens/coins quality.</string>
    <string name="withdraw_funds_from">Withdraw Funds From</string>
    <string name="public_key">Public Key</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="enter_value">Enter Value</string>
    <string name="buy">Buy</string>
    <string name="transfer">Transfer</string>
    <string name="from">From</string>
    <string name="request">Request</string>
    <string name="cards">Cards</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="kryptopal">KryptoPal</string>
    <string name="add_amount">Add Amount</string>
    <string name="prepaid_amount">Prepaid Amount</string>
    <string name="new_key">New</string>
    <string name="flat_wallet_features">FLAT Wallet Features</string>
    <string name="balance_icon">Balance Icon</string>
    <string name="balance">Balance</string>
    <string name="pay_icon">Pay Icon</string>
    <string name="pay">Pay</string>
    <string name="add_money_icon">Add Money Icon</string>
    <string name="add_money">Add Money</string>
    <string name="kryptopal_icon">KryptoPal Icon</string>
    <string name="total_flat_currency_balance">Total FIAT Currency Balance</string>
    <string name="this_feature_is_coming_soon">This feature is coming soon!</string>
    <string name="message">Message</string>
    <string name="ok">Ok</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="baldwin_john">Baldwin John</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="personal_information">Personal Information</string>
    <string name="update">Update</string>
    <string name="aadhaar_no">Aadhaar No</string>
    <string name="pan_card">PAN Card</string>
    <string name="verified">Verified</string>
    <string name="transactions">Transactions</string>
    <string name="rewards">Rewards</string>
    <string name="contacts">Contacts</string>
    <string name="value">Value</string>
    <string name="identity">Identity</string>
    <string name="exchange">Exchange</string>
    <string name="send">Send</string>
    <string name="action_kryptopal">Action KryptoPal</string>
    <string name="cryptocurrency_value">Cryptocurrency Value</string>
    <string name="details">Details</string>
    <string name="kryptopal_features">KryptoPal Features</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_using_below">Pay Using Below</string>
    <string name="recharge_pay_for">Recharge / Pay For</string>
    <string name="mobile_nprepaid">Mobile\nPrepaid</string>
    <string name="dth">DTH</string>
    <string name="book_on_paisapay">Book On PaisaPay</string>
    <string name="_0_0">0.0</string>
    <string name="mobile_npostpaid">Mobile\nPostpaid</string>
    <string name="electricity">Electricity</string>
    <string name="movies">Movies</string>
    <string name="bus">Bus</string>
    <string name="flights">Flights</string>
    <string name="trains">Trains</string>
    <string name="_2000">2000</string>
    <string name="add">Add</string>
    <string name="lock_icon">lock icon</string>
    <string name="security_icon">security icon</string>
    <string name="_0">0</string>
    <string name="up_arrow">up arrow</string>
    <string name="success">success</string>
    <string name="enter_your_ethereum_address">Enter Your Ethereum Address</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_a_key">Don\'t have a Key?</string>
    <string name="generate_now">Generate Now</string>
    <string name="total">Total : </string>
    <string name="doller_default_value">$0.00</string>
    <string name="do_you_want_to_more_rewards">Do you want to more rewards?</string>
    <string name="connect_to_friends">Connect to Friends</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="select_from">Select From</string>
    <string name="exchange_now">Exchange Now</string>
    <string name="select_to">Select To</string>
    <string name="or">[or]</string>
    <string name="coming_qry">Coming Qty</string>
    <string name="send_now">Send Now</string>
    <string name="to">To</string>
    <string name="sending_token_to_cover">Sending token to cover</string>
    <string name="notes">Notes</string>
    <string name="recipient_wallet_address">Recipient Wallet Address</string>
    <string name="request_now">Request Now</string>
    <string name="receive">Receive</string>
    <string name="from_wallet_address">From Wallet Address</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="sell_now">Sell Now</string>
    <string name="default_amount">0.00</string>
    <string name="no_transaction">No Transaction Available</string>
    <string name="search_to_connect">Search To Connect</string>
    <string name="search">Search</string>
    <string name="usa">USA</string>
</resources>
