<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_krypto_home_id"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_krypto_shop_id"
        android:icon="@drawable/shop_icon"
        android:title="@string/shop" />
    <item
        android:id="@+id/bottom_krypto_scan_id"
        android:icon="@drawable/scan_icon"
        android:title="@string/scan" />
    <item
        android:id="@+id/bottom_krypto_profile_id"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
    <item
        android:id="@+id/bottom_krypto_id"
        android:icon="@drawable/krypto_press_icon"
        android:title="@string/kryptopal" />

</menu>