<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image_icon"
    tools:context="com.vivartha.kryptopal.fragment.IdentityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin_20"
        android:text="@string/identity"
        android:textColor="@color/colorKryptoHome"
        android:textSize="@dimen/text_size_22"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/enter_your_ethereum_address"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/text_size_16" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:gravity="center"
        android:text="4e6cf0fkdyr16roebbc64e6cf0fkdyr16roebbc6"
        android:textColor="@color/colorEditText"
        android:textSize="@dimen/text_size_14"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout_min10"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height_40"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin_30"
        android:text="@string/don_t_have_a_key"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/text_size_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_10"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="@dimen/layout_weightsum_width_0"
            android:layout_height="@dimen/layout_height_40"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.4"
            android:background="@drawable/button_background"
            android:text="@string/generate_now"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>
